# libecm

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Makefile  bin2ecm.c  cmake_install.cmake  cmdlinecommon.c  cmdlinecommon.h  ecm2bin.c
include/: common.h  ecm.h
src/: common.c  ecm.c
